Bug 491889 - Building kmymoney5 from stable branch fails with gpgme 1.23.2
Summary: Building kmymoney5 from stable branch fails with gpgme 1.23.2
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: packaging (other bugs)
Version First Reported In: 5.1.3
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 488491
  Show dependency treegraph
 
Reported: 2024-08-19 07:59 UTC by Ralf Habacker
Modified: 2024-08-24 06:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Build log (1.09 MB, text/plain)
2024-08-19 07:59 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-08-19 07:59:21 UTC
Created attachment 172744 [details]
Build log

STEPS TO REPRODUCE
1. see attached log generated by https://build.opensuse.org/package/show/windows:mingw:win32:snapshots/mingw32-kmymoney5

OBSERVED RESULT
The build fails with 
[   88s] /home/abuild/rpmbuild/BUILD/kmymoney-5.1+20240819+git.ec9d0d67/kmymoney/plugins/xml/libkgpgfile/kgpgfile.cpp:282:(.text+0x94c): undefined reference to `GpgME::Data::seek(long, int)'

EXPECTED RESULT
The build should not fail
Comment 1 Ralf Habacker 2024-08-19 18:18:13 UTC
The master branch is also affected by this issue.
Comment 2 Ralf Habacker 2024-08-20 12:47:07 UTC
The solution is to replace the call to seek() with rewind(), which was added with qgpgme 1.12 in May 2018 (see https://github.com/gpg/gpgme/commit/618aa7f08db41911f25632d9fba23bca80908ebe).
Comment 3 Thomas Baumgart 2024-08-24 06:49:04 UTC
Git commit 8e173074110368e0a944ec46b95f179989d6cbdb by Thomas Baumgart.
Committed on 24/08/2024 at 06:48.
Pushed by tbaumgart into branch 'master'.

Fix building with gpgme 1.23.2
FIXED-IN: 5.2

M  +2    -2    kmymoney/misc/kgpgfile.cpp

https://invent.kde.org/office/kmymoney/-/commit/8e173074110368e0a944ec46b95f179989d6cbdb