Fix building with gpgme 1.23.2

BUG: 491889
FIXED-IN: 5.2